--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,3 +218,14 @@ footer {
     color: #fff;
     margin-bottom: 15px;
 }
+
+@media only screen and (max-width: 980px) {
+    .container #section {
+        background-color: pink;
+        max-width: 640;
+        padding: 0 20px;
+    }
+    .container {
+        max-width: 640px;
+    }
+}
