--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,9 +294,14 @@ footer {
     
     }
     nav a{
-        width: 30%;
-        padding-left: 10px;
+        width: 33%;
         margin-left: 0;
+        padding: 5px;
+    }
+
+    nav ul li:last-child a {
+        border: none;
+        padding: 0 0 0 5px;
     }
     img {
         clear: both;
