--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,7 @@ footer {
     bottom: 10px;
     left: -0px;
 }
+
 /* styling for the page content holder */
 .container #section{
     background-color: #fff;
@@ -145,6 +146,7 @@ footer {
     margin: 20px 20px 20px 0;
     float: left;
     padding: 100px;
+    
 }
 /* makes images in the portfolio list opaque when hovered over */
 .port-list:hover{
@@ -179,29 +181,39 @@ footer {
 }
 /* (place1 - place 5 are images for the portfolio thumbnails*/
 #place1{
-    background: url(../images/file-11.jpeg);
+    background: url(../images/word.png);
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+   
 }
 #place2{
-    background: url(../images/file-12.jpeg);
+    background: url(../images/RPG.png);
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    
 }
 #place3{
-    background: url(../images/file-8.jpeg);
+    background: url(../images/trivia.png);
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    
 }
 #place4{
-    background: url(../images/file-7.jpeg);
+    background: url(../images/train.png);
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    
 }
 #place5{
-    background: url(../images/file-6.jpeg);
+    background: url(../images/project1.png);
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    
 }
 /* styling for contact forms message text area */
 #field-message{
