--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,13 @@ footer {
     background-repeat: no-repeat;
     
 }
+#place6{
+    background: url(../images/FriendFinder.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
 /* styling for contact forms message text area */
 #field-message{
     width: 95%;
