--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,6 +222,13 @@ footer {
     background-repeat: no-repeat;
     
 }
+#place7{
+    background: url(../images/Project2.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
 /* styling for contact forms message text area */
 #field-message{
     width: 95%;
